--- a/package.json
+++ b/package.json
@@ -1,23 +1,32 @@
 {
-    "name": "jest-p2",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "test": "jest",
-        "testcov": "jest --coverage",
-        "test1": "jest src/01-getting-started",
-        "test1cov": "jest src/01-getting-started --coverage",
-        "testfile": "jest src/01-getting-started/scripts/lfsplay.test.js"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "devDependencies": {
-        "@babel/cli": "^7.0.0",
-        "@babel/preset-env": "^7.0.0",
-        "jest": "^24.9.0",
-        "node-fetch": "^2.6.0",
-        "whatwg-fetch": "^3.0.0"
-    }
+  "name": "jest-p2",
+  "version": "1.0.0",
+  "description": "This project is the \"Getting Started\" project for EvovleU Full Stack Development program. It is a baseline to demonstrate:",
+  "main": "index.js",
+  "scripts": {
+    "test": "jest",
+    "testcov": "jest --coverage",
+    "binarytest": "jest ../binary-adder",
+    "test1": "jest src/01-getting-started",
+    "test1cov": "jest src/01-getting-started --coverage"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@babel/cli": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "jest": "^24.9.0",
+    "node-fetch": "^2.6.0",
+    "whatwg-fetch": "^3.0.0"
+  },
+  "dependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/J-Currier/personalProjects.git"
+  },
+  "bugs": {
+    "url": "https://github.com/J-Currier/personalProjects/issues"
+  },
+  "homepage": "https://github.com/J-Currier/personalProjects#readme"
 }
